# AnyDock

./: CMakeLists.txt  README.md
AnyDock/: .gitignore  AnyDock.cpp  AnyDock.h  AnyDock.pri  AnyDock.pro  AnyDock.qrc  AnyDock.sln  AnyDock.ui  AnyDock.vcxproj  AnyDock.vcxproj.filters  CMakeLists.txt  main.cpp  ui_AnyDock.h
inc/: anydock.h  mousedragger.h  timeplugin.h
res/: anydock.qrc
src/: anydock.cpp  main.cpp  mousedragger.cpp  timeplugin.cpp
ui/: anydock.ui
